# theme-analysis-ui

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  Dockerfile  ENGINEERING_CHARTER.md  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  run_cicd_themes_to_sandbox.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
cicd/: cloudbuild_dev_and_sandbox.yaml  cloudbuild_promote_preprod.yaml
data/: example_synthetic_pii_feedback.csv
docs/: index.md
docs/reference/: theme_analysis_ui.md
example_reports/: example_in_numbers.md
scripts/: fetch_ons_templates.sh  manage_users.py
src/theme_analysis_ui/: __init__.py  app.py  config.py
src/theme_analysis_ui/app_templates/: accessibility.html  cancel.html  confirm.html  cookies.html  core.html  example_report.html  index.html  login.html  privacy.html  reports.html  review_responses.html  theme_meta.html  upload.html  upload_theme_file.html
src/theme_analysis_ui/auth/: password_utils.py
src/theme_analysis_ui/routes/: __init__.py  ui.py
src/theme_analysis_ui/storage/: __init__.py  base.py  factory.py  gcp.py  local.py
src/theme_analysis_ui/utils/: workflow_utils.py
tests/: test_config.py  test_local_storage.py  test_routes.py  test_storage_factory.py  test_workflow.py
