[tool.poetry]
name = "theme-analysis-ui"
version = "0.1.0"
description = ""
authors = ["Steve Gibbard <steve.gibbard"ons.gov.uk>"]
packages = [{ include = "theme_analysis_ui", from = "src" }]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
google-cloud-storage = "^3.9.0"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.6.8"
mypy = "^1.10.0"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
bandit = "^1.7.9"
pre-commit = "^3.7.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
mkdocstrings = {extras = ["python"], version = "^1.0.3"}
types-pyyaml = "^6.0.12.20250915"
detect-secrets = "^1.5.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E","F","W",   # pycodestyle/pyflakes
  "I",              # isort
  "N",              # pep8-naming
  "B",              # bugbear
  "UP",             # pyupgrade
]
ignore = [
  # add any project-specific ignores here
]

[tool.ruff.lint.isort]
known-first-party = ["theme_analysis_ui"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["src/theme_analysis_ui"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
